--- a/app/app/public/index.html
+++ b/app/app/public/index.html
@@ -28,6 +28,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <script src="https://js.stripe.com/v3/"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
